<resources>
    <string name="app_name">Lgame</string>
    <string name="title">L-GAME</string>
    <string name="SinglePlayer">One player</string>
    <string name="MultiPlayer">Two players</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="About">About the game</string>
    <string name="AboutInfo">The L game is considered a simple abstract strategy board game. It was invented by Edward de Bono and was introduced in his book \"The Five-Day Course in Thinking\" (1967). \nRead more in the wikipedia article:</string>
    <string name="GoToWiki"><u>https://en.wikipedia.org/wiki/L_game</u></string>
    <string name="AboutInfo2">The article includes rules, strategy and analysis of the game.</string>
    <string name="RuleTitle_moveL">How to move the L piece</string>
    <string name="RuleTitle_moveN">How to move a neutral piece</string>
    <string name="Rule_moveL">Click on the squares you want it to occupy. Click again to remove a square. Make sure the squares: \n- Are not occupied by a neutral piece \n- Are not part of the L belonging to the other player \nThe new L can re-use squares from the previous position (marked with a light color), but at least ONE square has to be new. \nClick \"done\" when you are satisfied with the new position. After moving the L you can chose to move one of the two neutral pieces if you want.</string>
    <string name="Rule_moveN">Click on the neutral piece you want to move, and then on the new position. Click \"done\" afterwards. \nIf you do not want to move a neutral piece, you can click on \"done\" right away. \nIf you want to move the other neutral piece instead of the one you clicked at, just move it back in place and click on the other one neutral piece instead.</string>
    <string name="RuleTitle_win">The goal of the game</string>
    <string name="Rule_win">You win when the other person has no place to move their L-piece.</string>
    <string name="RulesTitle">Rules</string>
    <string name="square_value"> </string>
    <string name="DonePickingNewPos">Done</string>
    <string name="darkMode">Dark mode</string>
    <string name="lightMode">Light mode</string>
    <string name="Player1_text">Player 1</string>
    <string name="Player2_text">Player 2</string>
    <string name="colorMode">Color mode</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="Stats">Statistics</string>
    <string name="Home">Home</string>
    <string name="WinNr1"><b>Wins P1:</b></string>
    <string name="WinNr2"><b>Wins P2:</b></string>
    <string name="easyNormalHard">Easy - Normal - Hard</string>
    <string name="WinNrYou"><b>Wins you:</b></string>
    <string name="WinNrAI"><b>Wins AI:</b></string>
    <string name="Reset1P">Reset one player stats</string>
    <string name="Reset2P">Reset two player stats</string>
    <string name="moveNeutralPiece">Optional move: Move a neutral (black) piece</string>
    <string name="moveL">Move the L-piece by tapping on white and/or lightly colored squares</string>
</resources>