<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnClicked"
            android:text="@string/Easy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="btnClicked"
            android:text="@string/Normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="btnClicked"
            android:text="@string/Hard"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>