<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/title"
        android:textColor="@color/darkGrey"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:onClick="playOnePlayer"
        android:text="@string/SinglePlayer"
        android:textColor="@color/darkGrey"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/twoPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="playTwoPlayers"
        android:text="@string/MultiPlayer"
        android:textColor="@color/darkGrey"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onePlayer"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:id="@+id/helpBtn"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="56dp"
        android:background="@color/white"
        android:onClick="goToHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settingsBtn"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="56dp"
        android:background="@color/white"
        android:onClick="goToSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/helpBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <Button
        android:id="@+id/stats"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="goToStats"
        android:text="@string/Stats"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayers" />

</androidx.constraintlayout.widget.ConstraintLayout>